--- a/src/templates/profile/freelancer_profile.html
+++ b/src/templates/profile/freelancer_profile.html
@@ -35,7 +35,7 @@
                     </a>
                 </div>
                 <button
-                    class="mt-4 bg-primary_medium text-white font-bold py-2 px-4 rounded hover:bg-primary_dark focus:outline-none">
+                class="bg-primary_medium text-white px-4 py-2 rounded-xl mt-4 hover:bg-primary_dark transition-transform duration-300 hover:scale-110">
                     Editar Perfil
                 </button>
             </div>
