--- a/src/templates/projects/milestones.html
+++ b/src/templates/projects/milestones.html
@@ -9,7 +9,11 @@
         <h2 class="text-2xl font-bold text-primary_black">Hitos</h2>
 
         {% url 'add_milestone' project.id as add_milestone_url %}
-        {% include 'utils/anchor_button.html' with type=1 label='Añadir' url=add_milestone_url %}
+
+        {% if user_is_owner %}
+            {% include 'utils/anchor_button.html' with type=1 label='Añadir' url=add_milestone_url %}
+        {% endif %}
+        
     </div>
 
     <div class="grid grid-cols-3 gap-6 mt-4">
