Feat: add some errors messages

--- a/src/templates/profile/register_company.html
+++ b/src/templates/profile/register_company.html
@@ -3,10 +3,10 @@
 {% block content %}
 <div class="pt-16 pb-10 px-4 sm:px-6 lg:px-8 bg-bg_white">
     <div class="max-w-7xl mx-auto mb-6 sm:ml-0 lg:ml-40">
-        <h1 class="text-3xl font-bold text-primary_black text-left">Registro de Freelancer</h1>
-        <h2 class="text-lg font-semibold text-primary_dark text-left">Datos Personales</h2>
+        <h1 class="text-3xl font-bold text-primary_black text-left">Registro de Empresa</h1>
+        <h2 class="text-lg font-semibold text-primary_dark text-left">Datos de la Empresa</h2>
         <p class="block text-primary_black font-normal mt-4 font-sans semi">
-            Por favor, completa los siguientes campos para crear tu perfil de freelancer.
+            Completa la información requerida para registrar tu empresa en nuestra plataforma.
         </p>
     </div>
 
