--- a/src/templates/projects/project_main_view.html
+++ b/src/templates/projects/project_main_view.html
@@ -8,10 +8,12 @@
             {% url 'my_projects' as list_projects_available %}
             {% include 'utils/anchor_button.html' with label='Mis Proyectos' type=2 url=list_projects_available %}
         </div>
+        {% if request.profile_type == 'client' %}
         <div class="flex">
             {% url 'create_project' as create_project_url %}
             {% include 'utils/anchor_button.html' with label='Crear Proyecto' type=1 url=create_project_url %}
         </div>
+        {% endif %}
     </div>
 
     <div class="flex justify-between items-center mb-6">
