--- a/src/templates/profile/register_freelancer.html
+++ b/src/templates/profile/register_freelancer.html
@@ -10,27 +10,166 @@
         </p>
     </div>
 
+    {% if not registration_successful %}
     <div class="max-w-2xl mx-auto bg-bg_white p-8 rounded-md" id="form-container">
         <form method="POST" enctype="multipart/form-data" class="space-y-6">
             {% csrf_token %}
             {{ form.non_field_errors }}
 
-            {% for field in form %}
-                <div>
-                    <label class="block text-primary_black font-medium" for="{{ field.id_for_label }}">{{ field.label }}</label>
-                    {{ field }}
-                    {% if field.errors %}
-                        <div class="text-red-500 text-sm">{{ field.errors }}</div>
-                    {% endif %}
-                </div>
-            {% endfor %}
+            <!-- Campo de Nombre de Usuario -->
+            <div>
+                <label class="block text-primary_black font-medium" for="id_username">Nombre de Usuario</label>
+                <input type="text" name="username" id="id_username" value="{{ form.username.value|default_if_none:'' }}"
+                    class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
+                    placeholder="Nombre de Usuario" required>
+                {% if form.username.errors %}
+                <div class="text-red-500 text-sm">{{ form.username.errors.0 }}</div>
+                {% endif %}
+            </div>
+
+            <!-- Campo de ID de Identificación -->
+            <div>
+                <label class="block text-primary_black font-medium" for="id_identification">ID de Identificación</label>
+                <input type="text" name="identification" id="id_identification"
+                    value="{{ form.identification.value|default_if_none:'' }}"
+                    class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
+                    placeholder="ID de Identificación" required>
+                {% if form.identification.errors %}
+                <div class="text-red-500 text-sm">{{ form.identification.errors.0 }}</div>
+                {% endif %}
+            </div>
+
+            <!-- Campo de Teléfono -->
+            <div>
+                <label class="block text-primary_black font-medium" for="id_phone">Teléfono</label>
+                <input type="text" name="phone" id="id_phone" value="{{ form.phone.value|default_if_none:'' }}"
+                    class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
+                    placeholder="Teléfono" required>
+                {% if form.phone.errors %}
+                <div class="text-red-500 text-sm">{{ form.phone.errors.0 }}</div>
+                {% endif %}
+            </div>
+
+            <!-- Campo de Correo Electrónico -->
+            <div>
+                <label class="block text-primary_black font-medium" for="id_email">Correo Electrónico</label>
+                <input type="email" name="email" id="id_email" value="{{ form.email.value|default_if_none:'' }}"
+                    class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
+                    placeholder="Correo Electrónico" required>
+                {% if form.email.errors %}
+                <div class="text-red-500 text-sm">{{ form.email.errors.0 }}</div>
+                {% endif %}
+            </div>
+
+            <!-- Campo de Contraseña -->
+            <div>
+                <label class="block text-primary_black font-medium" for="id_password1">Contraseña</label>
+                <input type="password" name="password1" id="id_password1"
+                    class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
+                    placeholder="Contraseña" required>
+                {% if form.password1.errors %}
+                <div class="text-red-500 text-sm">{{ form.password1.errors.0 }}</div>
+                {% endif %}
+            </div>
+
+            <!-- Campo de Confirmar Contraseña -->
+            <div>
+                <label class="block text-primary_black font-medium" for="id_password2">Confirmar Contraseña</label>
+                <input type="password" name="password2" id="id_password2"
+                    class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
+                    placeholder="Confirmar Contraseña" required>
+                {% if form.password2.errors %}
+                <div class="text-red-500 text-sm">{{ form.password2.errors.0 }}</div>
+                {% endif %}
+            </div>
+<!-- Campo de Foto de Perfil -->
+<div>
+    <label class="block text-primary_black font-medium">Foto de Perfil (opcional)</label>
+    <div class="mt-1 flex justify-center items-center px-6 pt-5 pb-6 border-2 border-dashed rounded-md relative">
+        <div class="space-y-1 text-center">
+            <svg class="mx-auto h-12 w-12 text-gray-400" stroke="currentColor" fill="none" viewBox="0 0 48 48" aria-hidden="true">
+                <path d="M8 19v11a2 2 0 002 2h28a2 2 0 002-2V19M16 7h16v6a2 2 0 01-2 2H18a2 2 0 01-2-2V7z" />
+            </svg>
+            <div class="flex text-sm text-gray-600 justify-center">
+                <label for="id_photo" class="relative cursor-pointer bg-white rounded-md font-medium text-primary_medium hover:text-primary_dark focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-primary_medium">
+                    <span>Selecciona la imagen aquí</span>
+                    <input id="id_photo" name="photo" type="file" class="sr-only">
+                </label>
+            </div>
+            <p class="text-xs text-gray-500">Puedes adjuntar un archivo aquí</p>
+            <div id="uploadSuccess" class="hidden absolute top-0 right-0 mt-2 mr-2 text-green-500">
+                <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                </svg>
+            </div>
+        </div>
+    </div>
+    {% if form.photo.errors %}
+    <div class="text-red-500 text-sm mt-2">{{ form.photo.errors.0 }}</div>
+    {% endif %}
+</div>
+
+
 
             <div class="flex justify-center">
-                <button type="submit" class="bg-primary_dark text-white font-bold py-3 px-6 rounded-md hover:bg-primary_black focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary_dark">
+                <button type="submit"
+                    class="bg-primary_dark text-white font-bold py-3 px-6 rounded-md hover:bg-primary_black focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary_dark">
                     Registrar
                 </button>
             </div>
         </form>
     </div>
+    {% endif %}
+
+    <!-- Pop-Up de Confirmación -->
+    <div id="confirmationModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden">
+        <div class="bg-white p-6 rounded-lg shadow-lg w-96">
+            <div class="text-center">
+                <svg class="mx-auto h-12 w-12 text-primary_medium mb-4" fill="none" stroke="currentColor"
+                    viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                </svg>
+                <h3 class="text-lg font-semibold text-primary_black">Registro Exitoso</h3>
+                <p class="text-gray-600 mt-2">Tu información ha sido guardada exitosamente.</p>
+                <div class="mt-4 flex justify-center">
+                    <button id="acceptButton"
+                        class="bg-primary_medium text-white px-4 py-2 rounded hover:bg-primary_dark">Aceptar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- JavaScript para el Pop-Up -->
+    <script>
+
+        
+        document.addEventListener('DOMContentLoaded', function() {
+            const registrationSuccessful = {{ registration_successful|yesno:"true,false" }};
+            const modal = document.getElementById('confirmationModal');
+            const acceptButton = document.getElementById('acceptButton');
+            const closeModal = document.getElementById('closeModal');
+
+            // Muestra el modal si el registro fue exitoso
+            if (registrationSuccessful) {
+                modal.classList.remove('hidden');
+            }
+
+            // Cierra el modal y redirige al dashboard al hacer clic en aceptar
+            acceptButton.addEventListener('click', function() {
+                window.location.href = "/dashboard/";
+            });
+            
+            
+        });
+        
+        document.getElementById('id_photo').addEventListener('change', function () {
+            if (this.files.length > 0) {
+                document.getElementById('uploadSuccess').classList.remove('hidden');
+                setTimeout(() => {
+                    document.getElementById('uploadSuccess').classList.add('hidden');
+                }, 3000); // Oculta el mensaje después de 3 segundos
+            }
+        });
+        </script>
 </div>
 {% endblock %}
